# PRML

./: .pre-commit-config.yaml  README.md  ch01_Introduction.ipynb  ch02_Probability_Distributions.ipynb  ch03_Linear_Models_for_Regression.ipynb  ch04_Linear_Models_for_Classfication.ipynb  ch05_Neural_Networks.ipynb  ch06_Kernel_Methods.ipynb  classifications.py  distributions.py  entropies.py  environment.yaml  features.py  kernels.py  neural_network.py  prml.yaml  regressions.py  setup.cfg  setup.py
.github/: FUNDING.yml
.github/workflows/: run-notebooks.yaml
docs/: genindex.html  index.html  modules.html  objects.inv  prml.autodiff.array.html  prml.autodiff.core.html  prml.autodiff.html  prml.autodiff.math.html  prml.autodiff.nonlinear.html  prml.bayesnet.html  prml.clustering.html  prml.dimreduction.html  prml.html  prml.kernel.html  prml.linear.html  prml.markov.html  prml.nn.array.html  prml.nn.distribution.html  prml.nn.html  prml.nn.image.html  prml.nn.io.html  prml.nn.loss.html  prml.nn.math.html  prml.nn.nonlinear.html  prml.nn.normalization.html  prml.nn.optimizer.html  prml.nn.random.html  prml.preprocess.html  prml.rv.html  prml.sampling.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: index.rst.txt  prml.autodiff.array.rst.txt  prml.autodiff.math.rst.txt  prml.autodiff.nonlinear.rst.txt  prml.dimreduction.rst.txt  prml.kernel.rst.txt  prml.linear.rst.txt  prml.markov.rst.txt  prml.nn.array.rst.txt  prml.nn.distribution.rst.txt  prml.nn.image.rst.txt  prml.nn.io.rst.txt  prml.nn.loss.rst.txt  prml.nn.nonlinear.rst.txt  prml.nn.optimizer.rst.txt  prml.nn.random.rst.txt  prml.nn.rst.txt  prml.rst.txt  prml.rv.rst.txt  prml.sampling.rst.txt
docs/_static/: documentation_options.js
docs/modules/: prml.autodiff.html  prml.autodiff.linalg.html  prml.autodiff.optimizer.html  prml.autodiff.random.html  prml.autodiff.signal.html  prml.bayesnet.functions.html  prml.bayesnet.html  prml.clustering.html  prml.dimreduction.html  prml.html  prml.kernel.html  prml.linear.html  prml.markov.html  prml.nn.array.html  prml.nn.distribution.html  prml.nn.functions.html  prml.nn.html  prml.nn.image.html  prml.nn.initializers.html  prml.nn.io.html  prml.nn.layers.html  prml.nn.loss.html  prml.nn.math.html  prml.nn.nonlinear.html  prml.nn.normalization.html  prml.nn.optimizer.html  prml.nn.random.html  prml.preprocess.html  prml.rv.html  prml.sampling.html
docs/src/: Makefile  conf.py  index.rst  modules.rst  prml.autodiff.core.rst  prml.autodiff.rst  prml.bayesnet.rst  prml.clustering.rst  prml.dimreduction.rst  prml.kernel.rst  prml.linear.rst  prml.nn.array.rst  prml.nn.distribution.rst  prml.nn.image.rst  prml.nn.io.rst  prml.nn.loss.rst  prml.nn.math.rst  prml.nn.nonlinear.rst  prml.nn.normalization.rst  prml.nn.optimizer.rst  prml.nn.random.rst  prml.nn.rst  prml.preprocess.rst  prml.rst  prml.sampling.rst
notebooks/: ch01_Introduction.ipynb  ch02_Probability_Distributions.ipynb  ch03_Linear_Models_for_Regression.ipynb  ch04_Linear_Models_for_Classfication.ipynb  ch05_Neural_Networks.ipynb  ch06_Kernel_Methods.ipynb  ch07_Sparse_Kernel_Machines.ipynb  ch08_Graphical_Models.ipynb  ch09_Mixture_Models_and_EM.ipynb  ch10_Approximate_Inference.ipynb  ch11_Sampling_Methods.ipynb  ch12_Continuous_Latent_Variables.ipynb  ch13_Sequential_Data.ipynb
prml/: __init__.py
prml/autodiff/: __init__.py
prml/autograd/: __init__.py  function.py
prml/bayesnet/: __init__.py  _bernoulli.py  _beta.py  _distribution.py  _gaussian.py  _kl_divergence.py  discrete.py
prml/clustering/: __init__.py  k_means.py
prml/dimreduction/: autoencoder.py  bayesian_pca.py  pca.py
prml/distributions/: __init__.py  bernoulli.py  bernoulli_mixture.py  beta.py  categorical.py  gaussian.py  gaussian_mixture.py  students_t.py  uniform.py  variational_gaussian_mixture.py
prml/feature/: __init__.py  bayesian_pca.py  gaussian.py  polynomial.py  (+1 more)
(+840 files in other folders)
