; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[options.extras_require]
develop =
    jupyter
    matplotlib
    pandas
    scikit-learn

    pre-commit

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

[flake8]
per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    test/*.py:D100,D101,D102,D103,D104

application-import-names = prml

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_google.py
import-order-style = google
