; See:
; https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[options.extras_require]
develop =
    jupyter
    matplotlib
    pandas
    scikit-learn

    pre-commit

    # format
    autopep8
    flake8
    flake8-absolute-import
    flake8-broken-line
    flake8-builtins
    flake8-commas
    flake8-docstrings
    flake8-import-order
    flake8-multiline-containers
    flake8-mutable
    pep8-naming

[flake8]
ignore =
    ; variable "sum" is shadowing a Python builtin
    A001
    ; class attribute is shadowing a Python builtin
    A003
    ; import statement "sum" is shadowing a Python builtin
    A004
    ; No blank lines allowed after function docstring
    D202
    ; missing whitespace around arithmetic operator
    E226
    ; missing whitespace after ':'
    E231
    ; missing whitespace around parameter equals
    E252
    ; expected 2 blank lines, found 1
    E302
    ; too many blank lines (2)
    E303
    ; comparison to False should be 'if cond is False:' or 'if not cond:'
    E712
    ; the module is shadowing a Python builtin module
    A005
    ; missing trailing comma
    C812
    ; Missing docstring in public module
    D100
    ; Missing docstring in public class
    D101
    ; Missing docstring in public method
    D102
    ; Missing docstring in public function
    D103
    ; Missing docstring in public package
    D104
    ; Missing docstring in magic method
    D105
    ; Missing docstring in __init__
    D107
    ; One-line docstring should fit on one line with quotes
    D200
    ; 1 blank line required between summary line and description
    D205
    ; Use r""" if any backslashes in a docstring
    D301
    ; First line should end with a period
    D400
    ; First line should not be the function's "signature"
    D402
    ; First line should be in imperative mood; try rephrasing
    D401
    ; First word of the first line should be properly capitalized
    D403
    ; missing whitespace after keyword
    E275
    ; line too long
    E501
    ; Import statements are in the wrong order.
    I100
    ;  Imported names are in the wrong order.
    I101
    ; Missing newline between import groups.
    I201
    ; Multi-line container not broken after opening character
    JS101
    ; function name should be lowercase
    N802
    ; argument name should be lowercase
    N803
    ; variable in function should be lowercase
    N806
    ; line break before binary operator
    W503
    ; invalid escape sequence
    W605
per-file-ignores =
    ; Ignore 'Missing docstring in public module' and 'variable "copyright" is shadowing a python builtin'
    docs/conf.py:A001,D100
    ; Ignore missing docstring in public module, class, method, function, package
    test/*.py:D100,D101,D102,D103,D104

application-import-names = prml

; https://github.com/PyCQA/flake8-import-order/blob/master/tests/test_cases/complete_google.py
import-order-style = google
